Bug 352633 - Visibility settings are omitted when create new Attributes or Operations
Summary: Visibility settings are omitted when create new Attributes or Operations
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.16.0 (KDE Applications 15.04.0)
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
: 341742 362978 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-12 23:10 UTC by Brallan Aguilar
Modified: 2016-10-26 17:13 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.17.90 (KDE Applications 15.11.90)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brallan Aguilar 2015-09-12 23:10:03 UTC
Umbrello skips custom visibility settings when create a new attribute/operation. To set the one I want, I must re enter to the attribute/operation and change the visibility again.

Reproducible: Always

Steps to Reproduce:
1. Create a new Class
2. Select Properties from that class
3. Go to Attributes or Operations
4. New Attribute/Operation
5. Create a new one with different visibility as default
6. The attribute/operation has the default one instead of selection
Comment 1 Youri Westerman 2015-11-27 21:10:14 UTC
I can confirm that this bug is present in version 15.04.2.
Comment 2 Youri Westerman 2015-11-28 00:49:30 UTC
After building 15.12 from git and reproducing the bug, I have come up with a solution.
The suggested change is available for review as a pull request on github:

https://github.com/KDE/umbrello/pull/1
Comment 3 Ralf Habacker 2015-12-01 06:24:35 UTC
Git commit 57178b8835e562929f848adbdf5290fd9c394d13 by Ralf Habacker, on behalf of Youri Westerman.
Committed on 01/12/2015 at 06:24.
Pushed by habacker into branch 'Applications/15.12'.

Using pointer to umlobject when it is not found within the document.
FIXED-IN: 2.17.90 (KDE Applications 15.11.90)

M  +3    -1    umbrello/cmds/cmd_baseObjectCommand.cpp
M  +2    -0    umbrello/cmds/cmd_baseObjectCommand.h

http://commits.kde.org/umbrello/57178b8835e562929f848adbdf5290fd9c394d13
Comment 4 Ralf Habacker 2016-01-20 23:02:57 UTC
Git commit 972f7145563d1e89754b612bcc03d3f754e952ca by Ralf Habacker.
Committed on 20/01/2016 at 23:02.
Pushed by habacker into branch 'Applications/15.12'.

Fix 'Crash on removing diagram'.

Using pointer to widget when it is not found within the document.
Related: bug 358286
FIXED-IN:2.18.2 (KDE Applications 15.12.2)

M  +10   -4    umbrello/cmds/widget/cmd_baseWidgetCommand.cpp
M  +3    -0    umbrello/cmds/widget/cmd_baseWidgetCommand.h

http://commits.kde.org/umbrello/972f7145563d1e89754b612bcc03d3f754e952ca
Comment 5 Ralf Habacker 2016-01-24 16:42:26 UTC
*** Bug 341742 has been marked as a duplicate of this bug. ***
Comment 6 Ralf Habacker 2016-06-02 10:58:02 UTC
*** Bug 362978 has been marked as a duplicate of this bug. ***