Using pointer to umlobject when it is not found within the document.

BUG: 352633
FIXED-IN: 2.17.90 (KDE Applications 15.11.90)